# simple-toml-settings

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  TODO.md  context7.json  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: codeql.yml  linting.yml  mypy.yml  testing.yml  tests.yml
changelog/: index.html
contributing/: index.html
docs/: CNAME  index.md  installation.md  usage.md
future-plans/: index.html
installation/: index.html
license/: index.html
search/: search_index.json
simple_toml_settings/: __init__.py  exceptions.py  main.py  settings.py  xdg_config.py
tests/: conftest.py  test_settings.py
usage/: index.html
