[tool.poetry]
name = "simple-toml-settings"
version = "0.2.2"
description = "A Python library to save your settings in a TOML file."
authors = ["Grant Ramsay <seapagan@gmail.com>"]
readme = "README.md"
license = "MIT"

packages = [{ include = "simple_toml_settings" }]

documentation = "https://seapagan.github.io/simple-toml-settings/"
repository = "https://github.com/seapagan/simple-toml-settings"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
# customize the below URLs to point to your own GitHub repo. These will be
# shown on [Pypi.org](https://pypi.org/) if you are creating a public package.
"Pull Requests" = "https://github.com/seapagan/simple-toml-settings/pulls"
"Bug Tracker" = "https://github.com/seapagan/simple-toml-settings/issues"
"Changelog" = "https://github.com/seapagan/simple-toml-settings/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rtoml = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configure dev dependencies you can add or remove as needed
[tool.poetry.group.dev.dependencies]
# linting, type-checking and security checks
bandit = { extras = ["toml"], version = "^1.7.5" }
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-pydocstyle = "^0.2.2"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^1.7.2"
flake8-type-checking = "^2.4.1"
flake8-use-pathlib = "^0.3.0"
isort = "^5.12.0"
pylint = ">=2.17.2,<4.0.0"
pylint-pydantic = ">=0.2.4,<0.4.0"
pylint-pytest = "^1.1.2"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
pymarkdownlnt = "^0.9.12"
mypy = "^1.4.1"
tryceratops = "^2.3.2"

# task runner
poethepoet = "0.22.1"

# testing
pytest = "^7.4.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"
pytest-sugar = "^0.9.7"
pytest-randomly = "^3.13.0"
pytest-reverse = "^1.7.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
mock = "^5.1.0"
faker = "^19.2.0"
pyfakefs = "^5.2.4"

# documentation
mkdocs = "^1.4.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-material = "^9.1.19"
mkdocs-minify-plugin = "^0.7.0"
pymdown-extensions = "^10.1"
pygments = "^2.15.1"

# setup PoeThePoet tasks
[tool.poe.tasks]
pre.cmd = "pre-commit run --all-files"
pre.help = "Run pre-commit checks"
pylint.cmd = "pylint **/*.py"
pylint.help = "Run pylint checks"
mypy.cmd = "mypy **/*.py"
mypy.help = "Run mypy checks"
flake8.cmd = "flake8 **/*.py"
flake8.help = "Run flake8 checks"
black.cmd = "black **/*.py"
black.help = "Check and format code with black"
try.cmd = "tryceratops **/*.py"
try.help = "Run tryceratops checks"
markdown.cmd = "pymarkdown scan **/*.md"
markdown.help = "Run markdown checks"
lint.sequence = ["black", "flake8", "mypy", "try", "pylint"]
lint.help = "Run all linting checks"

"docs:publish".cmd = "mkdocs gh-deploy"
"docs:publish".help = "Publish documentation to GitHub Pages"
"docs:build".cmd = "mkdocs build"
"docs:build".help = "Build documentation locally to './site' folder"
"docs:serve".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md"
"docs:serve".help = "Serve documentation locally"
"docs:serve:all".cmd = "mkdocs serve -w TODO.md -w CHANGELOG.md -w CONTRIBUTING.md -a 0.0.0.0:9000"
"docs:serve:all".help = "Serve documentation locally on all interfaces"

changelog.cmd = "github_changelog_generator -u seapagan -p simple-toml-settings"
changelog.help = "Generate a CHANGELOG.md file"

# configure assorted tools and linters
[tool.isort]
profile = "black"

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 80
exclude = ["__init__.py", ".git"]
extend-ignore = ["E203", "W503"]
extend-select = ["TC", "TC1", "TRY"]
docstring-convention = "google"
classmethod-decorators = ["classmethod", "validator"]

[tool.bandit]
exclude_dirs = []

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pylint.MAIN]
load-plugins = ["pylint_pytest", "pylint_pydantic"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.DESIGN]
exclude-too-few-public-methods = "pydantic"
max-attributes = 10

[tool.pydocstyle]
add-ignore = ["D104"]

[tool.pymarkdown]
plugins.md014.enabled = false

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report", "term-missing", "--cov-report", "html"]
filterwarnings = []
mock_use_standalone_module = true

[tool.coverage.run]
# source = []
omit = ["*/tests/*"]
